# gs-tbk-identity-audit-prototype

./: .env.example  .gitattributes  .gitignore  AGENTS.md  Cargo.toml  README.md
.github/workflows/: ci.yml
apps/audit-console/: README.md  package.json  server.mjs
chain-apps/fisco-bcos-java-sdk/: .gitignore  README.md  build.gradle  info_run.sh  settings.gradle  signature_run.sh
contracts/fisco-bcos/: PersonalInfo.sol  README.md  Signature.sol  Table.sol
crates/: README.md
crates/cl_encrypt/: Cargo.toml  build.rs
crates/cl_encrypt/src/: lib.rs  main.rs
crates/cl_encrypt/src/cl/: clwarpper.rs  mod.rs
crates/cl_encrypt/src/vss/: vss.rs
crates/class_group/: build.rs
crates/gs_tbk_scheme/: Cargo.toml
crates/id_info_process/: Cargo.toml
crates/id_info_process/src/: id_decode.rs  id_encode.rs  id_process.rs  lib.rs  main.rs  params.rs
crates/intergration_test/: Cargo.toml
crates/node/: Cargo.toml
crates/proxy/: Cargo.toml
crates/user/: Cargo.toml
docs/: README.md  ai-security-bridge.md  architecture.md  ci.md  overview.md  project-summary.md
docs/demo/: README.md  audit-console-demo.md
docs/evidence/: README.md  audit-query-demo.md  audit-query-live-vm-20260512T153825Z.json  audit-query-live-vm-20260512T153825Z.md  e2e-merge-readiness.md  e2e-report-20260511T063905Z.md  e2e-report-20260512T153825Z.md  e2e-repro-stage3.md  event-schema.md  failure-scenarios.md  fisco-contracts-phase1.md  fisco-java-sdk-stage2.md  fisco-strict-secrets-vm.md  mainline-regression-role-entrypoints.md  malicious-open-demo.md  malicious-open-live-vm-20260512T153825Z.json  malicious-open-live-vm-20260512T153825Z.md  malicious-open-live-vm-20260512T200205Z.md  runtime-summary.md
docs/interview/: project-walkthrough.md  resume-bullets.md  third-party-test-evidence.md
docs/operations/: README.md  fisco-runbook.md  secrets-and-config.md  service-supervision.md  vm-access.md
docs/plans/: README.md  project-optimization-plan.md  thesis-ai-security-finetuning-plan.md
docs/project-briefing/: project-positioning.md  project-walkthrough.md  (+1 more)
examples/: README.md
(+162 files in other folders)
