[workspace]
members = [
    "crates/class_group",
    "crates/gs_tbk_scheme",
    "crates/node",
    "crates/proxy",
    "crates/user",
    "crates/intergration_test",
    "crates/cl_encrypt",
    "crates/id_info_process",
]
resolver = "2"

[workspace.dependencies]
class_group = { path = "crates/class_group" }
gs_tbk_scheme = { path = "crates/gs_tbk_scheme" }
node = { path = "crates/node" }
proxy = { path = "crates/proxy" }
user = { path = "crates/user" }
intergration_test = { path = "crates/intergration_test" }
cl_encrypt = { path = "crates/cl_encrypt" }
id_info_process = { path = "crates/id_info_process" }

curv-kzen = { version = "0.9", default-features = false }
sha2 = "0.9"
thiserror = "1.0.23"
serde = { version = "1.0", features = ["derive"] }
time = "0.1"
serde_json = "1.0"
num = "0.2"
chrono = "0.4"
crossbeam-channel = "0.5.1"
bincode = "1.3.1"
anyhow = "1.0"
tokio = { version = "1.32.0", features = ["full"] }
regex = "1.5.0"
