[package]
name = "id_info_process"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cl_encrypt = {path = "../cl_encrypt"}
serde = { version = "1.0", features = ["derive"] }
curv = { package = "curv-kzen", git="https://github.com/ZenGo-X/curv.git", rev="44537a74"}
serde_json = "1.0"

[build-dependencies]
#cc = "1.0.73"
cc = "1.0"
